--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "tsc && node ./build/index.js",
     "dev": "ts-node-dev ./src/index.ts",
+    "migrations": "ts-node-dev ./src/data/migrations.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
